 - Qt: Fix FPS target maxing out at 59.727 (fixes mgba.io/i/1421)
 - Core: Fix crashes if core directories aren't set
 - Qt: Cap audio buffer size to 8192 (fixes mgba.io/i/1433)
 - Core: Fix crash when exiting game with cheats loaded
 - GBA Cheats: Fix PARv3 Thumb hooks
 - mGUI: Fix crash if last loaded ROM directory disappears (fixes mgba.io/i/1466)
Misc:
 - Qt: Make mute menu option also toggle fast-forward mute (fixes mgba.io/i/1424)
 - Qt: Show error message if file failed to load

0.7.2: (2019-05-25)
Emulation fixes:
 - GB: Fix HALT when IE and IF unused bits are set (fixes mgba.io/i/1349)
 - GB Timer: Fix timing adjustments when writing to TAC (fixes mgba.io/i/1340)
 - GB Video: Fix window y changing mid-window (fixes mgba.io/i/1345)
 - GB Video: Fix more window edge cases (fixes mgba.io/i/1346)
 - GBA: Fix RTC on non-standard sized ROMs (fixes mgba.io/i/1400)
 - GBA DMA: Fix DMA0-2 lengths (fixes mgba.io/i/1344)
 - GBA Memory: Fix writing to OBJ memory in modes 3 and 5
 - GBA Memory: Prevent writing to mirrored BG VRAM (fixes mgba.io/i/743)
 - GBA Video: Fix scanline cache with scale factor change edge cases
 - GBA Video: Fix sprite mosaic clamping (fixes mgba.io/i/1008)
 - GBA Video: Implement mosaic on transformed sprites (fixes mgba.io/b/5)
Other fixes:
 - 3DS: Ensure core 2 can be used for threaded renderer (fixes mgba.io/i/1371)
 - All: Fix several memory leaks
 - GB Core: Fix toggling WIN and OBJ being swapped
 - GBA: Fix skipping BIOS on irregularly sized ROMs
 - CMake: Fix .deb imagemagick dependencies
 - FFmpeg: Improve initialization reliability and cleanup
 - FFmpeg: Fix audio conversion producing gaps
 - LR35902: Fix disassembly of several CB-prefix instructions
 - LR35902: Fix trailing whitespace in disassembly
 - Qt: More app metadata fixes
 - Qt: Fix load recent from archive (fixes mgba.io/i/1325)
 - Qt: Fix overrides getting discarded (fixes mgba.io/i/1354)
 - Qt: Fix saved scale not getting set on resize (fixes mgba.io/i/1074)