@@ -13,6 +13,7 @@ Other fixes:
  - Core: Fix crash when exiting game with cheats loaded
  - GBA Cheats: Fix PARv3 Thumb hooks
  - mGUI: Fix crash if last loaded ROM directory disappears (fixes mgba.io/i/1466)
+ - Libretro: Fix crash changing allowing opposing directions (hhromic)
 Misc:
  - Qt: Make mute menu option also toggle fast-forward mute (fixes mgba.io/i/1424)
  - Qt: Show error message if file failed to load
